--- a/src/components/sbb-header/sbb-header.scss
+++ b/src/components/sbb-header/sbb-header.scss
@@ -55,4 +55,7 @@
   @include mq($from: large) {
     margin-right: auto;
   }
+  @include mq($from: small, $to: medium) {
+    --sbb-header-action-visibility-override: block;
+  }
 }
